tests/golden/err-component-multi-child/expected_error.txt
error: コンポーネント `Card` の末尾引数は `Html`（1個）ですが、子が2個あります（複数の子を受け取るには `Vec<Html>` を宣言してください）
 --> ./entry.clum:6:3
  |
6 |   Card 'お知らせ'
  |   ^^^^
